--- a/Bio-Data.html
+++ b/Bio-Data.html
@@ -35,12 +35,12 @@
 						<a href="#" class="cursor-link-blog-post-2">
 							<div class="blog-post-box">
 								<h5>Name: Keerthi Sharan Yakasiri <br>
-                                    DOB: 20 Octbober 1997 <br>
+                                    DOB: 20 October 1997 <br>
                                     Age:         27 <br>
                                     Blood Group: O+ <br>
                                     Zodiac:      Gemini <br>
-                                    Star:        Mrugasira 4 Pada <br> 
-                                    Hieght:      5'7" <br> <br> <br>
+                                    Star:        Mrigasira 4 Pada <br> 
+                                    Height:      5'7" <br> <br> <br>
                                 </h5>
 								<p style="font-size: 25px" class="mb-0 mt-3">Educational Journey</p>
 							</div>
@@ -60,7 +60,7 @@
 						<a href="#" class="cursor-link-blog-post-3">
 							<div class="blog-post-box">
 								<h5>BYJUS | BDE | 2019 <br>
-                                    Aegis | Operations Excutive | 2020 <br>
+                                    Aegis | Operations Executive | 2020 <br>
                                     NSE Talent Sprint | Operations Manager | 2021 <br>
                                     CAI - PPL | Software Engineer | 2022 - Till date <br></h5>
 							</div>
