--- a/Bio-Data.html
+++ b/Bio-Data.html
@@ -51,7 +51,7 @@
 							<div class="blog-post-box">
 								<h5> Jawahar Navodaya Vidyalaya | 10th | 2013 <br>
                                      Narayana Junior College | 12th | 2015 <br>
-                                     Madanapalle Instiute of Tehnology | B.Tech, ECE | 2019 <br> <br> <br></h5>
+                                     Madanapalle Institute of Technology | B.Tech, ECE | 2019 <br> <br> <br></h5>
 								<p style="font-size: 25px" class="mb-0 mt-3">Professional Journey</p>
 							</div>
 						</a>
