Cursor Removed from Bio Data

--- a/Bio-Data.html
+++ b/Bio-Data.html
@@ -280,11 +280,11 @@ a:hover {
 	  border-radius: 50%;
   	z-index: 1;
 }
-.cursor-shadow.active-blog-post-1 {
-	  background-image: url('cold_heart.jpg');
+<!--.cursor-shadow.active-blog-post-1 {
+	  background-image: url('cold_heart.jpg'); -->
 }
-.cursor-shadow.active-blog-post-2 {
-	  background-image: url('hijab_issue.JPEG');
+<!----.cursor-shadow.active-blog-post-2 {
+	  background-image: url('hijab_issue.JPEG'); -->
 }
 .cursor-shadow.active-blog-post-3 {
 	  background-image: url('http://ivang-design.com/alke/img/blog/3.jpg');
